--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -74,9 +74,37 @@ jobs:
       - name: Terraform Apply
         if: ${{ github.event.inputs.action == 'apply' }}
         run: |
-          terraform apply -auto-approve -var-file=${{ github.event.inputs.tfvars_file }} -input=false
+          terraform plan -var-file=${{ github.event.inputs.tfvars_file }} -input=false -out=tfplan
+          terraform apply -auto-approve tfplan
 
       - name: Terraform Destroy
         if: ${{ github.event.inputs.action == 'destroy' }}
         run: |
           terraform destroy -auto-approve -var-file=${{ github.event.inputs.tfvars_file }} -input=false
+
+      - name: Get Terraform Outputs
+        id: tf-outputs
+        if: ${{ github.event.inputs.action == 'apply' }}
+        run: |
+          echo "cluster_name=$(terraform output -raw cluster_name)" >> $GITHUB_OUTPUT
+
+      - name: Configure Kubectl
+        if: ${{ github.event.inputs.action == 'apply' }}
+        run: |
+          aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name ${{ steps.tf-outputs.outputs.cluster_name }}
+
+      - name: Setup Helm
+        if: ${{ github.event.inputs.action == 'apply' }}
+        uses: azure/setup-helm@v3
+        with:
+          version: 'v3.12.0'
+
+      - name: Deploy Website with Helm
+        if: ${{ github.event.inputs.action == 'apply' }}
+        run: |
+          helm upgrade --install website ../helm/website-chart \
+            --namespace default \
+            --set ingress.enabled=true \
+            --set service.type=NodePort \
+            --set ingress.className=alb \
+            --set ingress.hosts[0].host=yourdomain.com
